Changed the file and directory structure of header files. Now, you have to include following header file to use libsbmlsim.
#include "libsbmlsim/libsbmlsim.h"

("libsbmlsim/common.h" is automatically included by above header file.)

--- a/src/Makefile
+++ b/src/Makefile
@@ -47,7 +47,7 @@ $(BUILD_TEST): $(OBJS_TEST) $(BUILD_SHARED_LIB)
 	$(CC) $(CFLAGS) $(OBJS_TEST) -o test -L. -lsbmlsim -lsbml
 
 ### include ###
-$(OBJS): header.h
+$(OBJS): libsbmlsim/libsbmlsim.h
 
 ### clean up! ###
 .PHONY: clean
