Add -ansi -pedantic. This might help when we try to compile the code on VisualStudio.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 project(libsbmlsim)
 
+# cmake variables
+set(CMAKE_C_FLAGS "-O2 -Wall -ansi -pedantic")
 # language bindings
 option(WITH_JAVA     "Generate Java language bindings."   OFF)
 option(WITH_PYTHON   "Generate Python language bindings." OFF)
