atanh() now works on both C99 and C90 environment! Now the tests 00957 00958 00959 works on C90(-ansi -pedantic). This code is tested on MacOSX and Linux. Windows support (Visual C++) will be added soon.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES_COMMON ${SOURCES_COMMON}
   create_mySBML_objects.c
   dbg_printf.c
   e_acosh.c
+  e_atanh.c
   ev_alter_tree_structure.c
   forwarding_value.c
   free_mySBML_objects.c
