build "Release" as default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ else(MSVC)
 endif(MSVC)
 set(CMAKE_C_FLAGS "-O2")
 
+# build mode
+if(not CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release CACHE STRING
+    "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
+    FORCE)
+endif(not CMAKE_BUILD_TYPE)
+
 # language bindings
 option(WITH_JAVA     "Generate Java language bindings."   OFF)
 option(WITH_PYTHON   "Generate Python language bindings." OFF)
