sim.exe now works on Windows. public domain version of getopt() is used.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES_COMMON ${SOURCES_COMMON}
   libsbmlsim/libsbmlsim.h
   libsbmlsim/methods.h
   libsbmlsim/myResult.h
+  libsbmlsim/my_getopt.h
   libsbmlsim/osarch.h
   libsbmlsim/version.h
   alg_alter_tree_structure.c
