Yeaaaahhh!! python binding from SWIG now works!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ project(libsbmlsim)
 if(MSVC)
   add_definitions(/W3)
 else(MSVC)
-  add_definitions(-Wall -Wextra -ansi -pedantic)
+  #  add_definitions(-Wall -Wextra -ansi -pedantic)
+  add_definitions(-Wall -Wextra)
 endif(MSVC)
 set(CMAKE_C_FLAGS "-O2")
 
