--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,59 +1,59 @@
 set (SOURCES_COMMON)
 set(SOURCES_COMMON ${SOURCES_COMMON}
-  libsbmlsim/common.h
-  libsbmlsim/libsbmlsim.h
-  libsbmlsim/methods.h
-  libsbmlsim/myResult.h
-  libsbmlsim/my_getopt.h
-  libsbmlsim/osarch.h
-  libsbmlsim/version.h
-  alg_alter_tree_structure.c
-  alter_tree_structure.c
-  assignment_alter_tree_structure.c
-  calc.c
-  calc_event.c
-  calc_initial_assignment.c
-  calc_k.c
-  calc_temp_value.c
-  check_AST.c
-  check_math.c
-  check_num.c
-  chomp.c
-  create_calc_object_list.c
-  create_myResult_content.c
-  create_mySBML_objects.c
-  dbg_printf.c
-  e_acosh.c
-  e_atanh.c
-  ev_alter_tree_structure.c
-  forwarding_value.c
-  free_mySBML_objects.c
-  get_equation.c
-  initialize_delay_val.c
-  lu_decomposition.c
-  lu_solve.c
-  math_functions.c
-  myASTNode_func.c
-  output_result.c
-  prepare_algebraic.c
-  prepare_reversible_fast_reaction.c
-  prg_printf.c
-  print_node_type.c
-  print_result_list.c
-  s_log1p.c
-  set_local_para_as_value.c
-  simulate_explicit.c
-  simulate_implicit.c
-  str_is_number.c
-  substitute_delay_val.c
-  util.c
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/common.h
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/libsbmlsim.h
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/methods.h
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/myResult.h
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/my_getopt.h
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/osarch.h
+  ${PROJECT_SOURCE_DIR}/src/libsbmlsim/version.h
+  ${PROJECT_SOURCE_DIR}/src/alg_alter_tree_structure.c
+  ${PROJECT_SOURCE_DIR}/src/alter_tree_structure.c
+  ${PROJECT_SOURCE_DIR}/src/assignment_alter_tree_structure.c
+  ${PROJECT_SOURCE_DIR}/src/calc.c
+  ${PROJECT_SOURCE_DIR}/src/calc_event.c
+  ${PROJECT_SOURCE_DIR}/src/calc_initial_assignment.c
+  ${PROJECT_SOURCE_DIR}/src/calc_k.c
+  ${PROJECT_SOURCE_DIR}/src/calc_temp_value.c
+  ${PROJECT_SOURCE_DIR}/src/check_AST.c
+  ${PROJECT_SOURCE_DIR}/src/check_math.c
+  ${PROJECT_SOURCE_DIR}/src/check_num.c
+  ${PROJECT_SOURCE_DIR}/src/chomp.c
+  ${PROJECT_SOURCE_DIR}/src/create_calc_object_list.c
+  ${PROJECT_SOURCE_DIR}/src/create_myResult_content.c
+  ${PROJECT_SOURCE_DIR}/src/create_mySBML_objects.c
+  ${PROJECT_SOURCE_DIR}/src/dbg_printf.c
+  ${PROJECT_SOURCE_DIR}/src/e_acosh.c
+  ${PROJECT_SOURCE_DIR}/src/e_atanh.c
+  ${PROJECT_SOURCE_DIR}/src/ev_alter_tree_structure.c
+  ${PROJECT_SOURCE_DIR}/src/forwarding_value.c
+  ${PROJECT_SOURCE_DIR}/src/free_mySBML_objects.c
+  ${PROJECT_SOURCE_DIR}/src/get_equation.c
+  ${PROJECT_SOURCE_DIR}/src/initialize_delay_val.c
+  ${PROJECT_SOURCE_DIR}/src/lu_decomposition.c
+  ${PROJECT_SOURCE_DIR}/src/lu_solve.c
+  ${PROJECT_SOURCE_DIR}/src/math_functions.c
+  ${PROJECT_SOURCE_DIR}/src/myASTNode_func.c
+  ${PROJECT_SOURCE_DIR}/src/output_result.c
+  ${PROJECT_SOURCE_DIR}/src/prepare_algebraic.c
+  ${PROJECT_SOURCE_DIR}/src/prepare_reversible_fast_reaction.c
+  ${PROJECT_SOURCE_DIR}/src/prg_printf.c
+  ${PROJECT_SOURCE_DIR}/src/print_node_type.c
+  ${PROJECT_SOURCE_DIR}/src/print_result_list.c
+  ${PROJECT_SOURCE_DIR}/src/s_log1p.c
+  ${PROJECT_SOURCE_DIR}/src/set_local_para_as_value.c
+  ${PROJECT_SOURCE_DIR}/src/simulate_explicit.c
+  ${PROJECT_SOURCE_DIR}/src/simulate_implicit.c
+  ${PROJECT_SOURCE_DIR}/src/str_is_number.c
+  ${PROJECT_SOURCE_DIR}/src/substitute_delay_val.c
+  ${PROJECT_SOURCE_DIR}/src/util.c
   )
 
-set (SOURCES_LIB ${SOURCES_COMMON} lib_main.c)
-set (SOURCES_MAIN ${SOURCES_COMMON} main.c)
+set (SOURCES_LIB ${SOURCES_COMMON} ${PROJECT_SOURCE_DIR}/src/lib_main.c)
+set (SOURCES_MAIN ${SOURCES_COMMON} ${PROJECT_SOURCE_DIR}/src/main.c)
 set (SOURCES_TEST test.c)
 
-include_directories("./libsbmlsim" ${LIBSBML_INCLUDE_DIR})
+include_directories ("${PROJECT_SOURCE_DIR}/src/libsbmlsim" ${LIBSBML_INCLUDE_DIR})
 
 # Static library (only for UNIX)
 if(NOT MSVC)
@@ -73,3 +73,5 @@ target_link_libraries(test sbmlsim ${LIBSBML_LIBRARIES})
 add_executable(../sim ${SOURCES_MAIN})
 target_link_libraries(../sim sbmlsim ${LIBSBML_LIBRARIES})
 
+# Bindings
+add_subdirectory(bindings/python)
