Fixed to use correct (found) libSBML.

--- a/src/bindings/perl/CMakeLists.txt
+++ b/src/bindings/perl/CMakeLists.txt
@@ -19,4 +19,4 @@ SOURCES_LIB = ${SOURCES_LIB}")
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
 SWIG_ADD_MODULE(sbmlsimPerl perl libsbmlsim.i ${SOURCES_LIB})
-SWIG_LINK_LIBRARIES(sbmlsimPerl ${PERL_LIBRARIES} sbml)
+SWIG_LINK_LIBRARIES(sbmlsimPerl ${PERL_LIBRARIES} ${LIBSBML_LIBRARIES})
