added defined method type to swig interface file (sample codes show how to use these).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,5 +77,6 @@ target_link_libraries(../sim sbmlsim ${LIBSBML_LIBRARIES})
 if(NOT MSVC)
 add_subdirectory(bindings/perl)
 add_subdirectory(bindings/python)
+add_subdirectory(bindings/ruby)
 endif()
 add_subdirectory(bindings/java)
