Remove build option for Perl, Ruby on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,10 @@ endif(NOT CMAKE_BUILD_TYPE)
 # language bindings
 option(WITH_JAVA     "Generate Java language bindings."   OFF)
 option(WITH_PYTHON   "Generate Python language bindings." OFF)
-option(WITH_PERL     "Generate Perl language bindings."   OFF)
-option(WITH_RUBY     "Generate Ruby language bindings."   OFF)
+if(NOT WIN32)
+  option(WITH_PERL   "Generate Perl language bindings."   OFF)
+  option(WITH_RUBY   "Generate Ruby language bindings."   OFF)
+endif(NOT WIN32)
 
 # - Try to find libSBML
 # Once done this will define
