--- a/src/bindings/ruby/CMakeLists.txt
+++ b/src/bindings/ruby/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required(VERSION 2.8)
 FIND_PACKAGE(SWIG REQUIRED)
 INCLUDE(${SWIG_USE_FILE})
 
-#FIND_PROGRAM(RUBY_EXECUTABLE NAMES ruby)
-SET(RUBY_EXECUTABLE /usr/bin/ruby)
+FIND_PROGRAM(RUBY_EXECUTABLE NAMES ruby)
+#SET(RUBY_EXECUTABLE /usr/bin/ruby)
 EXECUTE_PROCESS(COMMAND ${RUBY_EXECUTABLE} -r rbconfig -e "print RbConfig::CONFIG['MAJOR']" OUTPUT_VARIABLE RBCONFIG_MAJOR)
 EXECUTE_PROCESS(COMMAND ${RUBY_EXECUTABLE} -r rbconfig -e "print RbConfig::CONFIG['MINOR']" OUTPUT_VARIABLE RBCONFIG_MINOR)
 EXECUTE_PROCESS(COMMAND ${RUBY_EXECUTABLE} -r rbconfig -e "print RbConfig::CONFIG['TEENY']" OUTPUT_VARIABLE RBCONFIG_TEENY)
