removed unnecessary print message

--- a/src/bindings/ruby/CMakeLists.txt
+++ b/src/bindings/ruby/CMakeLists.txt
@@ -26,10 +26,7 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/libsbmlsim ${LIBSBML_INCLUDE_DIR})
 
 SET(CMAKE_SWIG_FLAGS "")
 
-message(STATUS "
-SOURCES_LIB = ${SOURCES_LIB}")
-
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_MODULE(libsbmlsim ruby libsbmlsim.i ${SOURCES_LIB})
-SWIG_LINK_LIBRARIES(libsbmlsim ${RUBY_LIBRARY} sbml)
+SWIG_ADD_MODULE(sbmlsim ruby libsbmlsim.i ${SOURCES_LIB})
+SWIG_LINK_LIBRARIES(sbmlsim ${RUBY_LIBRARY} sbml)
