--- a/src/bindings/ruby/CMakeLists.txt
+++ b/src/bindings/ruby/CMakeLists.txt
@@ -28,5 +28,5 @@ SET(CMAKE_SWIG_FLAGS "")
 
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_MODULE(sbmlsim ruby libsbmlsim.i ${SOURCES_LIB})
-SWIG_LINK_LIBRARIES(sbmlsim ${RUBY_LIBRARY} sbml)
+SWIG_ADD_MODULE(libsbmlsim ruby libsbmlsim.i ${SOURCES_LIB})
+SWIG_LINK_LIBRARIES(libsbmlsim ${RUBY_LIBRARY} sbml)
