--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(libsbmlsim)
 if(MSVC)
   add_definitions(/W3)
 else(MSVC)
-  #  add_definitions(-Wall -Wextra -ansi -pedantic)
-  add_definitions(-Wall -Wextra)
+  #  add_definitions(-Wall -Wextra -ansi -pedantic -fno-strict-aliasing)
+  add_definitions(-Wall -Wextra -fno-strict-aliasing)
 endif(MSVC)
 set(CMAKE_C_FLAGS "-O2")
 
