Add version check (>= 2.0) for SWIG. CMake is also required to be (>= 2.8.7)

--- a/src/bindings/java/CMakeLists.txt
+++ b/src/bindings/java/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-FIND_PACKAGE(SWIG REQUIRED)
+FIND_PACKAGE(SWIG 2.0 REQUIRED)
 FIND_PACKAGE(Java REQUIRED)
 FIND_PACKAGE(JNI REQUIRED)
 INCLUDE(${SWIG_USE_FILE})
