Now, cmake will automatically copies test scripts, codes to corresponding binding dirs. Also, ruby support is improved!!

--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -17,3 +17,7 @@ SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
 SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
 SWIG_ADD_MODULE(libsbmlsim python libsbmlsim.i ${SOURCES_LIB})
 SWIG_LINK_LIBRARIES(libsbmlsim ${PYTHON_LIBRARIES} ${LIBSBML_LIBRARIES})
+
+file(COPY ${PROJECT_SOURCE_DIR}/examples/python/Test.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${PROJECT_SOURCE_DIR}/examples/sample.xml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../)
+
