--- a/src/bindings/ruby/CMakeLists.txt
+++ b/src/bindings/ruby/CMakeLists.txt
@@ -17,22 +17,34 @@ EXECUTE_PROCESS(COMMAND ${RUBY_EXECUTABLE} -r rbconfig -e "print RbConfig::CONFI
 
 IF (RBCONFIG_MAJOR EQUAL 1 AND RBCONFIG_MINOR EQUAL 8)
 
-SET(RUBY_INCLUDE_PATH "${RBCONFIG_ARCHDIR}")
-SET(RUBY_LIBRARY "${RBCONFIG_LIBDIR}/${RBCONFIG_LIBRUBY}")
-INCLUDE_DIRECTORIES(${RUBY_INCLUDE_PATH})
+  SET(RUBY_INCLUDE_PATH "${RBCONFIG_ARCHDIR}")
+  SET(RUBY_LIBRARY "${RBCONFIG_LIBDIR}/${RBCONFIG_LIBRUBY}")
+  INCLUDE_DIRECTORIES(${RUBY_INCLUDE_PATH})
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/libsbmlsim ${LIBSBML_INCLUDE_DIR})
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/libsbmlsim ${LIBSBML_INCLUDE_DIR})
 
-SET(CMAKE_SWIG_FLAGS "")
+  SET(CMAKE_SWIG_FLAGS "")
 
-SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
-SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
-SWIG_ADD_MODULE(libsbmlsim ruby libsbmlsim.i ${SOURCES_LIB})
-SWIG_LINK_LIBRARIES(libsbmlsim ${RUBY_LIBRARY} sbml)
+  SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES CPLUSPLUS OFF)
+  SET_SOURCE_FILES_PROPERTIES(libsbmlsim.i PROPERTIES SWIG_FLAGS "-includeall")
+  SWIG_ADD_MODULE(libsbmlsim_ruby ruby libsbmlsim.i ${SOURCES_LIB})
+  SWIG_LINK_LIBRARIES(libsbmlsim_ruby ${RUBY_LIBRARY} sbml)
+
+  set_target_properties (libsbmlsim_ruby PROPERTIES OUTPUT_NAME "libsbmlsim")
+  if (UNIX)
+    set_target_properties (libsbmlsim_ruby PROPERTIES PREFIX "")
+    if (APPLE)
+      set_target_properties (libsbmlsim_ruby PROPERTIES SUFFIX ".bundle")
+    endif()
+  endif()
+
+  file(COPY ${PROJECT_SOURCE_DIR}/examples/ruby/Test.rb DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  file(COPY ${PROJECT_SOURCE_DIR}/examples/sample.xml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../)
 
 ELSE()
 
-MESSAGE(STATUS "only ruby-1.8.* is supported")
+  MESSAGE(STATUS "only ruby-1.8.* is supported")
 
 ENDIF()
+
