Slightly modified Makefile to use relative include / library paths.

--- a/examples/cpp/Makefile
+++ b/examples/cpp/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ test.cpp -I${HOME}/local/src/libsbmlsim/src -L${HOME}/local/src/libsbmlsim/build/src -lsbmlsim
+	g++ test.cpp -I../../src -L../../build/src -lsbmlsim
