--- a/src/bindings/ruby/CMakeLists.txt
+++ b/src/bindings/ruby/CMakeLists.txt
@@ -42,6 +42,14 @@ IF (RBCONFIG_MAJOR EQUAL 1 AND RBCONFIG_MINOR EQUAL 8)
   file(COPY ${PROJECT_SOURCE_DIR}/examples/ruby/Test.rb DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
   file(COPY ${PROJECT_SOURCE_DIR}/examples/sample.xml DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../)
 
+  # Install targets
+  INSTALL(FILES ${PROJECT_SOURCE_DIR}/examples/sample.xml DESTINATION share/libsbmlsim)
+  INSTALL(FILES ${PROJECT_SOURCE_DIR}/examples/ruby/Test.rb DESTINATION share/libsbmlsim/ruby)
+  INSTALL(TARGETS libsbmlsim_ruby
+    LIBRARY DESTINATION share/libsbmlsim/ruby
+    ARCHIVE DESTINATION share/libsbmlsim/ruby
+    )
+
 ELSE()
 
   MESSAGE(STATUS "only ruby-1.8.* is supported")
