--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,10 +56,10 @@ set (SOURCES_TEST test.c)
 include_directories ("${PROJECT_SOURCE_DIR}/src/libsbmlsim" ${LIBSBML_INCLUDE_DIR})
 
 # Static library (only for UNIX)
-if(NOT MSVC)
+#if(NOT MSVC)
   add_library(sbmlsim-static STATIC ${SOURCES_LIB})
   target_link_libraries(sbmlsim-static ${LIBSBML_LIBRARIES})
-endif()
+#endif()
 
 # Shared library
 add_library(sbmlsim SHARED ${SOURCES_LIB})
