Added result files from sample.xml and C example code, Makefile for C and C++. Bit modified C++ code to fit with new sample.xml.

--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -1,14 +1,14 @@
 PROG = test
 OBJS = test.o
-CC = g++
+CC = gcc
 CFLAGS = -Wall -I/usr/local -I../../src
 LDFLAGS = -L/usr/local -L../../build/src -lsbmlsim
 
 .PHONY: all
 all: $(PROG)
 
-.SUFFIXES: .o .cpp
-.cpp.o:
+.SUFFIXES: .o .c
+.c.o:
 	$(CC) $(CFLAGS) -c $<
 
 $(PROG): $(OBJS)
