--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ endif(NOT CMAKE_BUILD_TYPE)
 # language bindings
 option(WITH_JAVA     "Generate Java language bindings."   OFF)
 option(WITH_PYTHON   "Generate Python language bindings." OFF)
+option(WITH_CSHARP   "Generate C# language bindings." OFF)
 if(NOT WIN32)
   #  option(WITH_PERL   "Generate Perl language bindings."   OFF)
   option(WITH_RUBY   "Generate Ruby language bindings."   OFF)
