Only 32bit for C# build.

--- a/src/bindings/csharp/CMakeLists.txt
+++ b/src/bindings/csharp/CMakeLists.txt
@@ -7,6 +7,9 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
 FIND_PACKAGE(SWIG 2.0 REQUIRED)
 INCLUDE(${SWIG_USE_FILE})
 
+# Only 32bit for this release
+set(CSHARP_PLATFORM "x86")
+
 # Find C#
 FIND_PACKAGE(CSharp REQUIRED)
 INCLUDE(${CSHARP_USE_FILE})
