C# for both Windows 32bit and 64bit. Default platform flag for C# is "anycpu". Confirmed to work on both WindowsXP(32bit) and Windows7(64bit).

--- a/src/bindings/csharp/CMakeLists.txt
+++ b/src/bindings/csharp/CMakeLists.txt
@@ -8,9 +8,9 @@ FIND_PACKAGE(SWIG 2.0 REQUIRED)
 INCLUDE(${SWIG_USE_FILE})
 
 # Only 32bit build on Windows
-if (WIN32)
-  set(CSHARP_PLATFORM "x86" CACHE STRING "C# target platfomr: x86, x64, anycpu, or itanium")
-endif (WIN32)
+#if (WIN32)
+#  set(CSHARP_PLATFORM "x64" CACHE STRING "C# target platfomr: x86, x64, anycpu, or itanium")
+#endif (WIN32)
 
 # Find C#
 FIND_PACKAGE(CSharp REQUIRED)
