--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,49 +15,55 @@ set(SOURCES_COMMON ${SOURCES_COMMON}
   ${PROJECT_SOURCE_DIR}/src/alter_tree_structure.c
   ${PROJECT_SOURCE_DIR}/src/assignment_alter_tree_structure.c
   ${PROJECT_SOURCE_DIR}/src/bifurcation_analysis.c
-  ${PROJECT_SOURCE_DIR}/src/calc.c
-  ${PROJECT_SOURCE_DIR}/src/calc_event.c
-  ${PROJECT_SOURCE_DIR}/src/calc_initial_assignment.c
-  ${PROJECT_SOURCE_DIR}/src/calc_k.c
-  ${PROJECT_SOURCE_DIR}/src/calc_temp_value.c
   ${PROJECT_SOURCE_DIR}/src/check_AST.c
   ${PROJECT_SOURCE_DIR}/src/check_math.c
   ${PROJECT_SOURCE_DIR}/src/check_num.c
-  ${PROJECT_SOURCE_DIR}/src/chomp.c
   ${PROJECT_SOURCE_DIR}/src/count_ode.c
-  ${PROJECT_SOURCE_DIR}/src/create_calc_object_list.c
-  ${PROJECT_SOURCE_DIR}/src/create_myResult_content.c
-  ${PROJECT_SOURCE_DIR}/src/create_mySBML_objects.c
-  ${PROJECT_SOURCE_DIR}/src/dbg_printf.c
   ${PROJECT_SOURCE_DIR}/src/dSFMT.c
-  ${PROJECT_SOURCE_DIR}/src/e_acosh.c
-  ${PROJECT_SOURCE_DIR}/src/e_atanh.c
   ${PROJECT_SOURCE_DIR}/src/ev_alter_tree_structure.c
-  ${PROJECT_SOURCE_DIR}/src/forwarding_value.c
-  ${PROJECT_SOURCE_DIR}/src/free_mySBML_objects.c
   ${PROJECT_SOURCE_DIR}/src/get_equation.c
-  ${PROJECT_SOURCE_DIR}/src/initialize_delay_val.c
-  ${PROJECT_SOURCE_DIR}/src/linear_approximation.c
-  ${PROJECT_SOURCE_DIR}/src/lu_decomposition.c
-  ${PROJECT_SOURCE_DIR}/src/lu_solve.c
-  ${PROJECT_SOURCE_DIR}/src/math_functions.c
-  ${PROJECT_SOURCE_DIR}/src/myASTNode_func.c
+  ${PROJECT_SOURCE_DIR}/src/myASTNode.c
+  ${PROJECT_SOURCE_DIR}/src/myResult.c
+  ${PROJECT_SOURCE_DIR}/src/mySBML_objects.c
   ${PROJECT_SOURCE_DIR}/src/output_result.c
   ${PROJECT_SOURCE_DIR}/src/prepare_algebraic.c
   ${PROJECT_SOURCE_DIR}/src/prepare_reversible_fast_reaction.c
-  ${PROJECT_SOURCE_DIR}/src/prg_printf.c
   ${PROJECT_SOURCE_DIR}/src/print_node_type.c
   ${PROJECT_SOURCE_DIR}/src/print_result_list.c
-  ${PROJECT_SOURCE_DIR}/src/reallocate_objects.c
-  ${PROJECT_SOURCE_DIR}/src/s_log1p.c
   ${PROJECT_SOURCE_DIR}/src/search_max.c
   ${PROJECT_SOURCE_DIR}/src/set_local_para_as_value.c
-  ${PROJECT_SOURCE_DIR}/src/show_sp_para.c
-  ${PROJECT_SOURCE_DIR}/src/simulate_explicit.c
-  ${PROJECT_SOURCE_DIR}/src/simulate_implicit.c
-  ${PROJECT_SOURCE_DIR}/src/str_is_number.c
-  ${PROJECT_SOURCE_DIR}/src/substitute_delay_val.c
-  ${PROJECT_SOURCE_DIR}/src/util.c
+  ${PROJECT_SOURCE_DIR}/src/math/asinh.c
+  ${PROJECT_SOURCE_DIR}/src/math/e_acosh.c
+  ${PROJECT_SOURCE_DIR}/src/math/e_atanh.c
+  ${PROJECT_SOURCE_DIR}/src/math/factorial.c
+  ${PROJECT_SOURCE_DIR}/src/math/fmax.c
+  ${PROJECT_SOURCE_DIR}/src/math/fmin.c
+  ${PROJECT_SOURCE_DIR}/src/math/isnan.c
+  ${PROJECT_SOURCE_DIR}/src/math/s_log1p.c
+  ${PROJECT_SOURCE_DIR}/src/solver/calc.c
+  ${PROJECT_SOURCE_DIR}/src/solver/calc_event.c
+  ${PROJECT_SOURCE_DIR}/src/solver/calc_initial_assignment.c
+  ${PROJECT_SOURCE_DIR}/src/solver/calc_k.c
+  ${PROJECT_SOURCE_DIR}/src/solver/calc_temp_value.c
+  ${PROJECT_SOURCE_DIR}/src/solver/create_calc_object_list.c
+  ${PROJECT_SOURCE_DIR}/src/solver/forwarding_value.c
+  ${PROJECT_SOURCE_DIR}/src/solver/initialize_delay_val.c
+  ${PROJECT_SOURCE_DIR}/src/solver/linear_approximation.c
+  ${PROJECT_SOURCE_DIR}/src/solver/lu_decomposition.c
+  ${PROJECT_SOURCE_DIR}/src/solver/lu_solve.c
+  ${PROJECT_SOURCE_DIR}/src/solver/simulate_explicit.c
+  ${PROJECT_SOURCE_DIR}/src/solver/simulate_implicit.c
+  ${PROJECT_SOURCE_DIR}/src/solver/substitute_delay_val.c
+  ${PROJECT_SOURCE_DIR}/src/util/chomp.c
+  ${PROJECT_SOURCE_DIR}/src/util/dbg_printf.c
+  ${PROJECT_SOURCE_DIR}/src/util/dupstr.c
+  ${PROJECT_SOURCE_DIR}/src/util/get_end_cycle.c
+  ${PROJECT_SOURCE_DIR}/src/util/my_time.c
+  ${PROJECT_SOURCE_DIR}/src/util/prg_printf.c
+  ${PROJECT_SOURCE_DIR}/src/util/set_seed.c
+  ${PROJECT_SOURCE_DIR}/src/util/show_para.c
+  ${PROJECT_SOURCE_DIR}/src/util/show_sp.c
+  ${PROJECT_SOURCE_DIR}/src/util/str_is_number.c
   )
 
 set (SOURCES_LIB ${SOURCES_COMMON} ${PROJECT_SOURCE_DIR}/src/lib_main.c)
