--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -159,6 +159,7 @@ endif()
 # for installer
 INCLUDE(InstallRequiredSystemLibraries)                                                                                                                                           
 
+SET(CPACK_PACKAGE_DESCRIPTION "LibSBMLSim")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "LibSBMLSim: The library for simulating SBML models")
 SET(CPACK_PACKAGE_NAME "libsbmlsim")
 SET(CPACK_PACKAGE_VENDOR "LibSBMLSim development team")
@@ -170,12 +171,20 @@ SET(CPACK_PACKAGE_VERSION_MINOR "1")
 SET(CPACK_PACKAGE_VERSION_PATCH "0")
 SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.txt")
 SET(CPACK_RESOURCE_FILE_WELCOME "${PROJECT_SOURCE_DIR}/templates/Welcome.txt")
-SET(CPACK_RPM_PACKAGE_LICENSE "LGPL")
-SET(CPACK_RPM_PACKAGE_GROUP "Libraries/Development")
-SET(CPACK_DEBIAN_PACKAGE_SECTION "Libraries")
+
+# 32bit or 64bit
+IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
+  SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
+  SET(CPACK_RPM_PACKAGE_ARCHITECTURE "i386")
+  SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-x86")
+ELSE()
+  SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+  SET(CPACK_RPM_PACKAGE_ARCHITECTURE "x86_64")
+  SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-x64")
+ENDIF()
 
 IF(WIN32 AND NOT UNIX)
-  SET(CPACK_PACKAGE_INSTALL_DIRECTORY "libsbmlsim-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
+  SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
   # There is a bug in NSI that does not handle full unix paths properly. Make
   # sure there is at least one set of four (4) backlasshes.
   #SET(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
@@ -189,18 +198,22 @@ ELSE(WIN32 AND NOT UNIX)
   SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0)
   SET(CPACK_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
   SET(CPACK_SET_DESTDIR "ON")
+  IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    SET(CPACK_GENERATOR "DEB")
+    SET(CPACK_INSTALL_PREFIX "/usr")
+    SET(CPACK_RPM_PACKAGE_LICENSE "LGPL")
+    SET(CPACK_RPM_PACKAGE_GROUP "Libraries/Development")
+    SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+    SET(CPACK_DEBIAN_PACKAGE_SECTION "Libraries")
+    STRING(TOLOWER "${CPACK_PACKAGE_NAME}" CPACK_PACKAGE_NAME_LOWERCASE) 
+    SET(CPACK_PACKAGE_FILE_NAME 
+      "${CPACK_PACKAGE_NAME_LOWERCASE}_${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")   
+  ELSEIF(APPLE)
+    SET (CPACK_GENERATOR "PackageMaker")
+  ENDIF()
   #SET(CPACK_STRIP_FILES "bin/MyExecutable")
   #SET(CPACK_SOURCE_STRIP_FILES "")
 ENDIF(WIN32 AND NOT UNIX)
-
-# 32bit or 64bit
-IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
-  SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
-  SET(CPACK_RPM_PACKAGE_ARCHITECTURE "i386")
-ELSE()
-  SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
-  SET(CPACK_RPM_PACKAGE_ARCHITECTURE "x86_64")
-ENDIF()
 
 #SET(CPACK_PACKAGE_EXECUTABLES "MyExecutable" "My Executable")
 INCLUDE(CPack)
